<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/editview"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:paddingStart="10dp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/editview"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/identity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:button="@drawable/radiobutton"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/student"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="30dp"
                    android:button="@drawable/radiobutton"
                    android:checked="true"
                    android:text="@string/student" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/remember_passwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_weight="4"
                android:button="@drawable/checkbox"
                android:text="@string/rem_password" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:text="@string/register_hint"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>