<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundLightGray"
        android:paddingBottom="3dp"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:text="@string/time_setting"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/begin_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/relativelayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/begin_time"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/begin_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/click_to_set"
            android:textColor="@color/colorTextGray"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorBackgroundWhiteSmoke" />

    <RelativeLayout
        android:id="@+id/end_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/relativelayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/end_time"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/end_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/click_to_set"
            android:textColor="@color/colorTextGray"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorBackgroundWhiteSmoke" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/relativelayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/weekday"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/day_spin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorTextGray"
            android:textSize="16sp">

        </Spinner>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundLightGray"
        android:paddingBottom="3dp"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:text="@string/location_setting"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/relativelayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/location"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/click_to_set"
            android:textColor="@color/colorTextGray"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>