<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar_back"
        layout="@layout/app_bar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/course_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_back"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackgroundWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/course_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/relativelayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/course_name"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/course_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:textColor="@color/colorTextGray"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorBackgroundWhiteSmoke" />

        <RelativeLayout
            android:id="@+id/teacher_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/relativelayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/teacher_name"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/teacher_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:textColor="@color/colorTextGray"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorBackgroundWhiteSmoke" />

        <RelativeLayout
            android:id="@+id/student_num_layout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/relativelayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/student_num"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/student_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:textColor="@color/colorTextGray"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorBackgroundWhiteSmoke" />

        <RelativeLayout
            android:id="@+id/attendance_detail_layout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/relativelayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/attendance_detail"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/attendance_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:textColor="@color/colorTextGray"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_detail"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@drawable/button"
                android:text="@string/current_attendance"
                android:textColor="@color/colorTextLight"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/next_location_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="6dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/first_tv"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/next_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="6dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/second_tv"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/next_attendance_hint"
            android:textColor="@color/colorTextGray" />
    </LinearLayout>

    <TextView
        android:id="@+id/view_report_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:text="@string/view_report"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
</RelativeLayout>